Fix height map on mobile

--- a/css/pages.css
+++ b/css/pages.css
@@ -1553,8 +1553,9 @@ ol > li:before {
  *******/
 .page--wide .page-content-inner {
 	padding: 0;
-	width: 100%;
 	margin: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .page--wide .page-content-wrap {
